--- a/package.json
+++ b/package.json
@@ -132,8 +132,8 @@
     "clean": "aegir clean",
     "lint": "aegir lint",
     "dep-check": "aegir dep-check",
-    "build": "aegir build --no-bundle",
-    "release": "aegir release",
+    "build": "tsc --build",
+    "release": "npm release",
     "test": "aegir test",
     "test:node": "aegir test -t node"
   },
