--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nickreynolds2/nat-port-mapper",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Port mapping with UPnP and NAT-PMP",
   "license": "Apache-2.0 OR MIT",
   "homepage": "https://github.com/nickreynolds/nat-port-mapper#readme",
@@ -133,7 +133,7 @@
     "lint": "aegir lint",
     "dep-check": "aegir dep-check",
     "build": "tsc --build",
-    "release": "npm release",
+    "release": "npm publish",
     "test": "aegir test",
     "test:node": "aegir test -t node"
   },
